Runtime API_URL env var

--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>Client App</title>
     <style>
-    body > [role="alert"] {
-      color: darkorange;
-      text-align: center;
-    }
+      body > [role="alert"] {
+        color: darkorange;
+        text-align: center;
+      }
     </style>
+    <script>
+      window.API_URL = "%API_URL%";
+    </script>
   </head>
   <body>
     <noscript>Без JavaScript ніяк. Перепрошую.</noscript>
